fixed overflow home and about

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -6,8 +6,15 @@
     padding-top:100px;
     width: 90%;
     margin: 0 auto;
+
+    @include md {
+      width: 60%;
+    }
 }
 
+.text {
+  width: 90%;
+  margin: 0 auto;
 .image {
     display: flex;
     flex-direction: column;
@@ -16,7 +23,7 @@
     // background-color: white;
     margin: 0 auto;
 }
-
+}
 .text__title {
     font-size: 2.8rem;
     line-height:3.2rem;
